--- a/K_nearest_neighbors.ipynb
+++ b/K_nearest_neighbors.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "K nearest neighbors.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPS2qDWp6gqt/i7jQviSl3v",
+      "authorship_tag": "ABX9TyO6NCmTwA7vHFoPhJRDUZKJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,10 @@
       "metadata": {
         "id": "mDBOBH4S0VXj",
         "colab_type": "code",
-        "outputId": "d97f3d1e-023d-4fc6-a196-fac436fdf170",
+        "outputId": "213c36fe-c096-43a1-b6d6-6f60e5cbe740",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 122
         }
       },
       "source": [
@@ -45,12 +45,16 @@
         "\n",
         "df = pd.read_csv(\"/content/drive/My Drive/datasets/breast-cancer-wisconsin.data\")\n"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -61,7 +65,7 @@
       "metadata": {
         "id": "ABDWvU4QCwRi",
         "colab_type": "code",
-        "outputId": "d43a2265-b2f8-4fcd-97cc-154e913d8406",
+        "outputId": "c3b73bb5-4504-413a-8f67-1e8c658e0626",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,18 +80,18 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
         "\n",
-        "clf = svm.SVC()\n",
+        "clf = svm.SVC(kernel='linear')\n",
         "clf.fit(X_train, y_train)\n",
         "\n",
         "accuracy = clf.score(X_test, y_test)\n",
         "print(accuracy)"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.6285714285714286\n"
+            "0.95\n"
           ],
           "name": "stdout"
         }
@@ -98,7 +102,7 @@
       "metadata": {
         "id": "2IwDenOBFHbV",
         "colab_type": "code",
-        "outputId": "83c20540-95db-4060-b145-de121e2457fc",
+        "outputId": "56ccee4b-7c0e-4a48-8c28-b4b3ea20740a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -110,7 +114,7 @@
         "prediction = clf.predict(example_measures)\n",
         "print(prediction)"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
